# topic__QTFFmpegSDLPlayer

./: README.md  report(template)__Qt-Drawing.odt
QTFFmpegSDLPlayer-Modi/: CMakeLists.txt  qtDrawImageLineReg_zh_CN.ts
QTFFmpegSDLPlayer_VC14_ver_debug/: qtDrawImageLineReg.ilk
ffmpeg-4.0-win64-dev/lib/: 新建文本文档.txt
